css/login.css
@keyframes slide-in-right {
    from {
        left: 100%;
    }
    to {
        left: 0%;
    }
}

@keyframes slide-out-left {
    from {
        left: 0%;
    }
    to {
        left: -100%;
    }
}

body {
    background-image: url('/images/background-morgantown-1.jpg');
    background-size: cover;
    color: #2f2f2f;
}

.backdrop-filter {
    position: absolute;
    left: 0px;
    top: 0px;
    z-index: -1;
    filter: blur(5px);
    background-image: url('/images/background-morgantown-1.jpg');
    background-size: cover;
    width: 100vw;
    height: 100vh;
}

.form-panel {
    display: flex;
    background-color: rgba(255, 255, 255, 0.8);
    border-radius: 32px;
    width: 60vw;
    height: 74vh;
    margin: auto;
    margin-top: 48px;
}

.info-panel {
    display: flex;
    flex-flow: column;
    width: 56%;
    padding: 48px;
    background-color: #2f2f2f;
    border-bottom-left-radius: 32px;
    border-top-left-radius: 32px;
    color: white;
}

.info-panel > p {
    font-size: x-large;
    margin-left: 16px;
}

.info-panel a {
    color: white;
}

.info-panel > footer > a {
    font-size: larger;
}

.flex-fill-space {
    flex-grow: 1;
}

.info-panel > footer {
    display: flex;
    justify-content: space-between;
}

.form-carousel {
    width: 44%;
    height: 100%;
    overflow: hidden;
}

.form-wrapper {
    display: inline-block;
    position: relative;
    top: 0px;
    margin-top: 32px;
    margin-bottom: 32px;
    padding: 32px;
    padding-left: 64px;
    padding-right: 64px;
    width: calc(100% - 2 * 64px);
    height: calc(100% - 64px * 2);
}

.form-wrapper:last-of-type {
    top: -100%;
    left: 100%;
}

h2 {
    font-size: 2.5rem;
    text-align: center;
}

.info-panel > h2 {
    text-align: left;
}

#login-pfp {
    display: block;
    width: 160px;
    height: 160px;
    margin: auto;
    margin-bottom: 32px;
    clip-path: circle(79px at center);
}

label {
    font-size: large;
    font-weight: bold;
}

.required-label::after {
    content: ' *';
    color: red;
}

input:not([type=checkbox]) {
    width: 100%;
    height: 48px;
    border-radius: 24px;
    border: none;
    padding: 24px;
    font-size: 0.9rem;
    outline: none;
    margin: auto;
    margin-top: 8px;
    margin-bottom: 24px;
    display: block;
    background-color: rgba(0, 0, 0, 0);
    border: 1px solid #797979;
}

.name-wrapper {
    display: flex;
    justify-content: space-between;
    column-gap: 16px;
}

button {
  display: block;
  background-color: rgba(0, 0, 0, 0);
  border: 2px solid green;
  padding: 16px;
  border-radius: 32px;
  width: 60%;
  color: green;
  margin: auto;
  margin-top: 24px;
  margin-bottom: 32px;
  font-size: larger;
  cursor: pointer;
  transition: background-color 0.2s linear;
}

button:hover {
    color: white;
    background-color: green;
}

.form-wrapper a {
    margin: auto;
    margin-top: 24px;
    display: block;
    text-align: center;
    font-size: larger;
    text-decoration: none;
}

